# ArguementWinner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  voice.example.md
src/argumentwinner/: __init__.py  __main__.py  config.py  container.py
src/argumentwinner/adapters/: common.py
src/argumentwinner/adapters/cli/: repl.py
src/argumentwinner/core/: engine.py  models.py  ports.py  prompts.py  ranking.py  sessions.py  strategy.py  voice.py
src/argumentwinner/llm/: anthropic_provider.py  factory.py  fake.py  openai_provider.py  prices.json  prices.py  usage.py
src/argumentwinner/storage/: __init__.py  sqlite_store.py
tests/: conftest.py  test_boundary.py  test_container.py
tests/adapters/: test_common.py
tests/adapters/desktop/: test_helper.py
tests/adapters/discord/: test_combat_rules.py  test_sending.py  test_translate.py
tests/adapters/telegram/: test_cache.py  test_combat_rules.py  test_suggestion.py  test_translate.py
tests/adapters/web/: test_server.py
tests/contracts/: test_llm_provider.py  test_session_store.py
tests/core/: test_engine.py  test_prompts.py  test_prompts_golden.py  test_ranking.py  test_strategy.py  test_voice.py
tests/core/goldens/: analysis_system.txt  analysis_user.txt  generation_system_medium.txt  generation_system_medium_voice.txt  generation_user_combat.txt  generation_user_suggest.txt
tests/llm/: test_anthropic_provider.py  test_factory.py  test_live_providers.py  test_openai_provider.py  test_prices.py  test_usage.py
tests/storage/: test_sqlite_store.py
(+15 files in other folders)
