[project]
name = "argumentwinner"
version = "0.1.0"
description = "A framework that wins arguments for you. Discord first; other messengers via adapters."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "openai>=1.40",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
desktop = [
    "pynput>=1.7",
    "pyperclip>=1.8",
]
telegram = [
    "python-telegram-bot>=21.6",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argumentwinner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real LLM provider APIs (needs keys; run with `pytest -m live`)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
